# j2ee-couse-test

./: .gitignore  Cargo.toml  README.md  book.toml  docker-compose.yml  traefik.toml
doc/: SUMMARY.md  api.md  login_serve_api.md  page_serve_api.md  quick_start.md  this_obj.md  user.md
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/conf/: nginx.conf
frontend/src/: main.rs
frontend/src/pages/: home.rs  login.rs  not_found.rs
frontend/src/pages/login/: login_error.rs  login_in.rs  login_success.rs  login_up.rs  route.rs  user_data.rs
gateway/: Cargo.toml  Dockerfile  Gateway.toml
gateway/src/: listen.rs  main.rs  proxy.rs
login-serve/: Cargo.toml  Dockerfile
login-serve/src/: error.rs  login_in.rs  login_up.rs  main.rs  static_setting.rs
login-serve/src/db/: mod.rs  user.rs
page-serve/: Cargo.toml  Dockerfile
page-serve/conf/: sources.list
page-serve/src/: main.rs
page-serve/web/: Cargo.toml  Trunk.toml  index.html
page-serve/web/src/: api.rs  component.rs  main.rs  pages.rs
page-serve/web/src/component/: blog_item.rs  infinite_for.rs  lazy_for.rs  main_header.rs  mod.rs
page-serve/web/src/pages/: home.rs  login.rs  not_found.rs  route.rs
page-serve/web/src/pages/login/: login_in.rs  login_up.rs  route.rs  user_data.rs
