[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
target = "wasm32-unknown-unknown"

[dependencies]
yew = "0.19.3"
gloo = "0.8.0"
js-sys = "0.3.59"
yew-router = "0.16.0"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"

[dependencies.web-sys]
features = ["HtmlInputElement"]
version = "0.3.59"
