[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
warp = "0.3.2"
